2010-11-22  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * doc/geany.txt, doc/geany.html:
   Explain how to grep the source for Scintilla lexer properties.


2010-11-21  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * data/filetypes.xml:
   Add 'instanceof' keyword for PHP (closes #3109330).


2010-11-18  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/build.c, src/dialogs.c, src/dialogs.h, src/callbacks.c:
   Re-focus Set Build Commands/Project dialogs after editing a build
   command label.
   Add 'parent' argument to some dialogs_show_input*() functions because
   the dialog parent may not always be the main window.
 * src/build.c, src/dialogs.c, src/callbacks.c:
   Don't change default build command entry color when cancelling
   label editing.
   Make dialogs_show_input() return NULL when cancelled.
 * tagmanager/php.c:
   Parse PHP final functions (fixes #3111171).
 * src/dialogs.c, src/plugindata.h, src/plugins.c,
   plugins/geanyfunctions.h:
   Add dialogs_show_input() to API.


2010-11-17  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/build.c, doc/geany.txt, doc/geany.html:
   Change 'Non-Filetype Commands' to 'Independent Commands' in the Set
   Build Commands dialog.
 * doc/geany.txt, doc/geany.html:
   Use 'Filetype build commands' and 'Independent build commands'.
   Fix saying project *independent* execute can only be set by hand.


2010-11-16  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/keybindings.c, src/editor.c, src/editor.h:
   Make Reflow Lines/Block command use the current indented block, not
   the whole paragraph, which could have mixed indentation.
   Fix memory leak and off-by-one bug on first line when using Select
   Paragraph command.
 * src/utils.c, src/highlighting.c, src/highlighting.h,
   src/plugindata.h, src/plugins.c, src/editor.c, src/editor.h,
   plugins/geanyfunctions.h:
   Add API functions (patch by Eugene Arshinov, thanks):